--- a/domain.yml
+++ b/domain.yml
@@ -34,9 +34,8 @@ responses:
   utter_ask_ssn:
   - text: "Please enter your ssn(social security number)"
   utter_submit:
-  - text: "Are you sure you want to submit?"
-
-  utter_ask_feedback:
+  - text: "Submitted data"
+  utter_feedback:
     - text: "what is the overall experience?"
   utter_goodbye:
     - text: "Bye"
